2004-04-08  Jerry James  <james@xemacs.org>

	* data.c: Use #ifndef for functions unused with new number types.
	* data.c (digit_to_number): Unused when HAVE_BIGNUM.
	* number.c: Remove multiply defined symbols Qintegerp & Qnumberp.
	* number.c (syms_of_number): DEFSUBR(Ffloatingp) was omitted.
	* print.c (print_internal): g++ thinks that specdepth might be
	used undefined.  It isn't, but the compiler can't tell.

2004-04-07  Jerry James  <james@xemacs.org>

	* number.c (Fevenp): Change the C boolean into Qnil/Qt.  Thanks to
	Robert Royar, Stephen Turnbull, and Hrvoje Niksic.
	* number.c (Foddp): Ditto.

2004-04-06  Jerry James  <james@xemacs.org>

	* bytecode.c (bytecode_arithcompare): Provide a default case to
	silence ICC.
	* bytecode.c (bytecode_arithop): Ditto.
	* data.c (Fstring_to_number): Use Ibyte instead of char.
	* data.c (Fmax): Cast from Ibyte to char as needed.
	* data.c (Flogand): REALLY commit the previous patch to data.c.
	* doprnt.c (emacs_doprnt_1): Use Ibyte instead of char.
	* floatfns.c (Ffloor): Provide a default case to silence ICC.
	* lread.c (parse_integer): Cast from Ibyte to char.
	* number-gmp.c: Get the qxe_getpid prototype.
	* number.c (string_to_bignum): Cast from Ibyte to char.
	* number.c (get_number_type): ICC does not know that abort does
	not return.
	* number.c (internal_coerce_number): Ditto.
	* number.h: Declare get_number_type.

2004-04-06  Jerry James  <james@xemacs.org>

	* number-mp.c (bignum_set_string): Read negative numbers correctly.

2004-04-06  Jerry James  <james@xemacs.org>

	* data.c (Flogand): Fix for --use-union-type.
	* data.c (Flogior): Ditto.

2004-04-06  Jerry James  <james@xemacs.org>

	* number-mp.c (bignum_to_double): Original algorithm was wrong.

2004-04-06  Stephen J. Turnbull  <stephen@xemacs.org>

	* lisp.h (Other numeric types): Band-aid: #define make_integer.

2004-04-05  Jerry James  <james@xemacs.org>

	* Makefile.in.in (number_objs): New.
	* Makefile.in.in (objs): Use it.